examples/test/testpolicy13128.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13128
  namespace: namespace3
spec:
  podSelector:
    matchLabels:
      key43: value15
      key12: value30
      key13: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value31
          key10: value9
          key46: value32
      podSelector:
        matchLabels:
          key34: value35
          key5: value30
          key24: value32
